--- a/notebooks/Data Visualization Ayampp.ipynb
+++ b/notebooks/Data Visualization Ayampp.ipynb
@@ -2,24 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "085357ae-1b6e-4ac2-9705-5b2ab75a17ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "a34b28d5-704c-4146-96a2-e33f6eb1cd07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "RLRS_root_location = \"/\".join(os.getcwd().split('/')[:-1])\n",
+    "RLRS_root_location = Path().absolute() / \"../\"\n",
     "df_mi = pd.read_csv(f'{RLRS_root_location}/data/ayampp/menu_items.csv')\n",
     "df_mg = pd.read_csv(f'{RLRS_root_location}/data/ayampp/mod_groups.csv')\n",
     "df_mii = pd.read_csv(f'{RLRS_root_location}/data/ayampp/mod_items.csv')\n",
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "f7c5e100-b767-4ad0-8054-b96da3aa04a3",
    "metadata": {},
    "outputs": [
@@ -36,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/4l/zdcbvytx32g67ltv61tf5dqc0000gn/T/ipykernel_10210/2133616853.py:1: DtypeWarning: Columns (31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,156,157,159,161,162,163,164,165,166,167,168,169,170,172,173,174,175,176,177,181,182) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Benjamin Thong\\AppData\\Local\\Temp\\ipykernel_27356\\2133616853.py:1: DtypeWarning: Columns (32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,157,158,160,162,163,164,165,166,167,168,169,170,171,173,174,175,176,177,178,182,183) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_od = pd.read_csv(f'{RLRS_root_location}/data/ayampp/orders.csv')\n"
      ]
     }
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "ba8befea-0348-43af-a132-b6a306e23687",
    "metadata": {},
    "outputs": [
@@ -72,16 +74,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>cust_id</th>\n",
-       "      <th>created</th>\n",
-       "      <th>served</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>served_at</th>\n",
        "      <th>item1</th>\n",
        "      <th>item2</th>\n",
        "      <th>item3</th>\n",
        "      <th>item4</th>\n",
        "      <th>item5</th>\n",
        "      <th>item6</th>\n",
-       "      <th>item7</th>\n",
        "      <th>...</th>\n",
        "      <th>mods57</th>\n",
        "      <th>mods58</th>\n",
@@ -99,10 +101,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>iE7KbXeQRrgdHW20acg1NUaKlM73</td>\n",
+       "      <td>SpR2TLDrvcZWAOkPGtw4</td>\n",
        "      <td>1680698590599</td>\n",
        "      <td>1.680699e+12</td>\n",
        "      <td>uyLAIkFrugXDFupn5cH6</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -123,12 +125,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>bvkoXpIE2SMiRm6CmOUFJyWZoP62</td>\n",
+       "      <td>es6LCvJJwdS8kSvEZpE6</td>\n",
        "      <td>1680698562881</td>\n",
        "      <td>1.680699e+12</td>\n",
        "      <td>uaaCfJnKgLDbpp5BKjJs</td>\n",
        "      <td>sIYfTIFkqU3XYxoRy8G1</td>\n",
        "      <td>H1jWneJIwy0vU2nTrSMJ</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -147,11 +149,11 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>vKbZ9j6WGsdBMc11HSBLLqnS14c2</td>\n",
+       "      <td>RmfvCeCB0WAZMYl9EUqz</td>\n",
        "      <td>1680698602333</td>\n",
        "      <td>1.680699e+12</td>\n",
        "      <td>0Xd60T9Jc4hxDjD85u5w</td>\n",
        "      <td>uaaCfJnKgLDbpp5BKjJs</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -171,11 +173,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>zs5V5O4zMPYiKxzO0e2EBy4uq403</td>\n",
+       "      <td>bM0SUwEhyIOmwFZKoa09</td>\n",
        "      <td>1680698054810</td>\n",
        "      <td>1.680699e+12</td>\n",
        "      <td>Rp4T9cGa5SptaNJv2nuk</td>\n",
        "      <td>URP9e2B1WdCZkhX5Rl9j</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -195,11 +197,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>zs5V5O4zMPYiKxzO0e2EBy4uq403</td>\n",
+       "      <td>FyzALmAYzrDM0hW615VX</td>\n",
        "      <td>1681127093116</td>\n",
        "      <td>1.681127e+12</td>\n",
        "      <td>Bab6SE4e8yfncTSfJcbN</td>\n",
        "      <td>uaaCfJnKgLDbpp5BKjJs</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -218,42 +220,42 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 201 columns</p>\n",
+       "<p>5 rows × 202 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        cust_id        created        served  \\\n",
-       "0  iE7KbXeQRrgdHW20acg1NUaKlM73  1680698590599  1.680699e+12   \n",
-       "1  bvkoXpIE2SMiRm6CmOUFJyWZoP62  1680698562881  1.680699e+12   \n",
-       "2  vKbZ9j6WGsdBMc11HSBLLqnS14c2  1680698602333  1.680699e+12   \n",
-       "3  zs5V5O4zMPYiKxzO0e2EBy4uq403  1680698054810  1.680699e+12   \n",
-       "4  zs5V5O4zMPYiKxzO0e2EBy4uq403  1681127093116  1.681127e+12   \n",
+       "                    customer_id              order_id     created_at  \\\n",
+       "0  iE7KbXeQRrgdHW20acg1NUaKlM73  SpR2TLDrvcZWAOkPGtw4  1680698590599   \n",
+       "1  bvkoXpIE2SMiRm6CmOUFJyWZoP62  es6LCvJJwdS8kSvEZpE6  1680698562881   \n",
+       "2  vKbZ9j6WGsdBMc11HSBLLqnS14c2  RmfvCeCB0WAZMYl9EUqz  1680698602333   \n",
+       "3  zs5V5O4zMPYiKxzO0e2EBy4uq403  bM0SUwEhyIOmwFZKoa09  1680698054810   \n",
+       "4  zs5V5O4zMPYiKxzO0e2EBy4uq403  FyzALmAYzrDM0hW615VX  1681127093116   \n",
        "\n",
-       "                  item1                 item2                 item3 item4  \\\n",
-       "0  uyLAIkFrugXDFupn5cH6                   NaN                   NaN   NaN   \n",
-       "1  uaaCfJnKgLDbpp5BKjJs  sIYfTIFkqU3XYxoRy8G1  H1jWneJIwy0vU2nTrSMJ   NaN   \n",
-       "2  0Xd60T9Jc4hxDjD85u5w  uaaCfJnKgLDbpp5BKjJs                   NaN   NaN   \n",
-       "3  Rp4T9cGa5SptaNJv2nuk  URP9e2B1WdCZkhX5Rl9j                   NaN   NaN   \n",
-       "4  Bab6SE4e8yfncTSfJcbN  uaaCfJnKgLDbpp5BKjJs                   NaN   NaN   \n",
+       "      served_at                 item1                 item2  \\\n",
+       "0  1.680699e+12  uyLAIkFrugXDFupn5cH6                   NaN   \n",
+       "1  1.680699e+12  uaaCfJnKgLDbpp5BKjJs  sIYfTIFkqU3XYxoRy8G1   \n",
+       "2  1.680699e+12  0Xd60T9Jc4hxDjD85u5w  uaaCfJnKgLDbpp5BKjJs   \n",
+       "3  1.680699e+12  Rp4T9cGa5SptaNJv2nuk  URP9e2B1WdCZkhX5Rl9j   \n",
+       "4  1.681127e+12  Bab6SE4e8yfncTSfJcbN  uaaCfJnKgLDbpp5BKjJs   \n",
        "\n",
-       "  item5 item6 item7  ... mods57 mods58 mods59 mods60 mods61 mods62 mods63  \\\n",
-       "0   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN    NaN    NaN    NaN   \n",
-       "1   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN    NaN    NaN    NaN   \n",
-       "2   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN    NaN    NaN    NaN   \n",
-       "3   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN    NaN    NaN    NaN   \n",
-       "4   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN    NaN    NaN    NaN   \n",
+       "                  item3 item4 item5 item6  ... mods57 mods58 mods59 mods60  \\\n",
+       "0                   NaN   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN   \n",
+       "1  H1jWneJIwy0vU2nTrSMJ   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN   \n",
+       "2                   NaN   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN   \n",
+       "3                   NaN   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN   \n",
+       "4                   NaN   NaN   NaN   NaN  ...    NaN    NaN    NaN    NaN   \n",
        "\n",
-       "  mods64 mods65 mods66  \n",
-       "0    NaN    NaN    NaN  \n",
-       "1    NaN    NaN    NaN  \n",
-       "2    NaN    NaN    NaN  \n",
-       "3    NaN    NaN    NaN  \n",
-       "4    NaN    NaN    NaN  \n",
+       "  mods61 mods62 mods63 mods64 mods65 mods66  \n",
+       "0    NaN    NaN    NaN    NaN    NaN    NaN  \n",
+       "1    NaN    NaN    NaN    NaN    NaN    NaN  \n",
+       "2    NaN    NaN    NaN    NaN    NaN    NaN  \n",
+       "3    NaN    NaN    NaN    NaN    NaN    NaN  \n",
+       "4    NaN    NaN    NaN    NaN    NaN    NaN  \n",
        "\n",
-       "[5 rows x 201 columns]"
+       "[5 rows x 202 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "b6eb7e03-bb00-4ca2-b709-cb6627fa9da6",
    "metadata": {},
    "outputs": [
@@ -383,7 +385,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "1ad707f8-e7d9-4d28-8807-110ffda97fa9",
    "metadata": {},
    "outputs": [
@@ -474,7 +476,7 @@
        "4       Steamed Rice  04Xg9FOSMVSrWiEMh0yv    1.0  4Dvzz5yKZ2gk6YFdHMfS"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "fba745a1-0f0d-430c-aca5-e01c40298c72",
    "metadata": {},
    "outputs": [
@@ -585,7 +587,7 @@
        "4  xQcrR7LzSqFFLaiNe5Zn|dRsKiHpWqDG10zbQjZxb|yy6p...  4Dvzz5yKZ2gk6YFdHMfS  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "103f97d7-d942-4cea-a9f4-37831ecb9b2c",
    "metadata": {},
    "outputs": [
@@ -606,19 +608,19 @@
        "17315"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# number of orders\n",
-    "df_od.cust_id.count()"
+    "df_od.customer_id.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "3e1a57ca-b4b0-475e-bbe4-afbf8476ca0f",
    "metadata": {},
    "outputs": [
@@ -628,53 +630,43 @@
        "9743"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# number of unique customers\n",
-    "df_od.cust_id.nunique()"
+    "df_od.customer_id.nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "3f48eaf6-f89b-49f2-81d7-f5f8e5a9fa59",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "cust_id\n",
-       "00q9URl3ooUfU6C6UuJEPasuR0x1    1\n",
-       "01E84lYBxQWLsi0wQuNzlTS2Gi23    1\n",
-       "03XugZJA3GfHvf4F78rqKIV10R43    2\n",
-       "046f2RIdfSS7I5P165S9v5gE2lg2    2\n",
-       "04HozLoul2U5LLf9Ll1gKUVAOzB3    1\n",
-       "                               ..\n",
-       "zy4uEVzbeMSyhNxw8S83mjArNGI3    1\n",
-       "zyPyH9nREJWmOc1pFZWvFMPD6nt2    1\n",
-       "zygkj15sqDMqxFNv2PiVIBwLJ8o1    6\n",
-       "zzSHUbOeXANO0gp5iRPCbe12Iu32    2\n",
-       "zzljbnTVz0M3uSoFfEGRWXmG9QN2    1\n",
-       "Name: created, Length: 9743, dtype: int64"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'DataFrameGroupBy' object has no attribute 'created'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# orders made by each customer\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdf_od\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[43mby\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcustomer_id\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreated\u001b[49m\u001b[38;5;241m.\u001b[39mcount()\n",
+      "File \u001b[1;32mc:\\Users\\Benjamin Thong\\.pyenv\\pyenv-win\\versions\\3.10.5\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py:1363\u001b[0m, in \u001b[0;36mGroupBy.__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m   1360\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m attr \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj:\n\u001b[0;32m   1361\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[attr]\n\u001b[1;32m-> 1363\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[0;32m   1364\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1365\u001b[0m )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrameGroupBy' object has no attribute 'created'"
+     ]
     }
    ],
    "source": [
     "# orders made by each customer\n",
-    "df_od.groupby(by=\"cust_id\").created.count()"
+    "df_od.groupby(by=\"customer_id\").created_at.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5f524d60-5012-4026-a7d8-931de49b90e8",
    "metadata": {},
    "outputs": [
@@ -703,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "ced7b321-2df6-4222-ab36-be1d17d2975f",
    "metadata": {},
    "outputs": [
@@ -730,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "edaf6802-ca8d-420f-9f38-76496194b42c",
    "metadata": {},
    "outputs": [
@@ -779,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
