--- a/notebooks/Data Visualization Ayampp.ipynb
+++ b/notebooks/Data Visualization Ayampp.ipynb
@@ -642,21 +642,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "3f48eaf6-f89b-49f2-81d7-f5f8e5a9fa59",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrameGroupBy' object has no attribute 'created'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# orders made by each customer\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdf_od\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[43mby\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcustomer_id\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreated\u001b[49m\u001b[38;5;241m.\u001b[39mcount()\n",
-      "File \u001b[1;32mc:\\Users\\Benjamin Thong\\.pyenv\\pyenv-win\\versions\\3.10.5\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py:1363\u001b[0m, in \u001b[0;36mGroupBy.__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m   1360\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m attr \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj:\n\u001b[0;32m   1361\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[attr]\n\u001b[1;32m-> 1363\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[0;32m   1364\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1365\u001b[0m )\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrameGroupBy' object has no attribute 'created'"
-     ]
+     "data": {
+      "text/plain": [
+       "customer_id\n",
+       "00q9URl3ooUfU6C6UuJEPasuR0x1    1\n",
+       "01E84lYBxQWLsi0wQuNzlTS2Gi23    1\n",
+       "03XugZJA3GfHvf4F78rqKIV10R43    2\n",
+       "046f2RIdfSS7I5P165S9v5gE2lg2    2\n",
+       "04HozLoul2U5LLf9Ll1gKUVAOzB3    1\n",
+       "                               ..\n",
+       "zy4uEVzbeMSyhNxw8S83mjArNGI3    1\n",
+       "zyPyH9nREJWmOc1pFZWvFMPD6nt2    1\n",
+       "zygkj15sqDMqxFNv2PiVIBwLJ8o1    6\n",
+       "zzSHUbOeXANO0gp5iRPCbe12Iu32    2\n",
+       "zzljbnTVz0M3uSoFfEGRWXmG9QN2    1\n",
+       "Name: created_at, Length: 9743, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
